Fix wrong .coverage.rc source directive

--- a/{{cookiecutter.repo_name}}/.coveragerc
+++ b/{{cookiecutter.repo_name}}/.coveragerc
@@ -2,7 +2,7 @@
 omit = */migrations/*
 
 [run]
-source = {{cookiecutter.repo_name}}.apps
+source = {{cookiecutter.repo_name}}/apps
 
 [report]
 # Regexes for lines to exclude from consideration
