--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 - '3.4'
 install:
 - pip install -r dev-requirements.txt
+- pip install -r \{\{cookiecutter.repo_name\}\}/requirements/base.txt
 script: make all
 notifications:
   email: false
