Replace Makefile install directive with setup
Now you can run make setup to install all requirements and
setup the database

--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,7 +1,9 @@
-.PHONY: install app
+.PHONY: setup app
 
-install:
+setup:
 	pip install -r requirements.txt
+	pip install -r requirements/local.txt
+	python manage.py migrate
 
 # Derived from http://stackoverflow.com/a/6273809/2390312
 app:
